# rust-sdk-contrib

./: .gitignore  .gitmodules  .release-please-manifest-independent-providers.json  .release-please-manifest-standalone.json  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  buf.gen.yaml  build.rs  context.md  release-please-config.json  release-please-independent-providers-config.json  release-please-standalone-config.json
.github/: component_owners.yml
.github/workflows/: flagd-check.yml  flagd-ofrep-check.yml  lint-pr.yml  release-please-flagd-family.yml  release-please-standalone.yml  release-please.yml  rust.yml
crates/env-var/: CHANGELOG.md  Cargo.toml  README.md
crates/env-var/src/: lib.rs
crates/env-var/tests/: example.rs
crates/env-var/tests/features/envs/: evaluation.feature
crates/flagd/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs
crates/flagd-evaluation-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/flagd-evaluation-engine/src/: error.rs  lib.rs
crates/flagd-evaluation-engine/src/model/: flag_parser.rs  flag_parser_test.rs  mod.rs
crates/flagd-evaluation-engine/src/targeting/: fractional.rs  mod.rs  semver.rs
crates/flagd-workspace/: Cargo.toml
crates/flagd-workspace/flagd/: Cargo.toml  build.rs
crates/flagd-workspace/flagd-evaluation-engine/: Cargo.toml
crates/flagd-workspace/flagd/examples/flags/: basic-flags.json
crates/flagd-workspace/flagd/flagd-testbed/: .gherkin-lintrc  .gitignore  .release-please-config.json  CHANGELOG.md  README.md  docker-compose.yaml  package-lock.json  package.json  renovate.json
crates/flagd-workspace/flagd/flagd-testbed/.github/workflows/: ci.yml  release-please.yml
crates/flagd-workspace/flagd/flagd-testbed/flagd/: Dockerfile
crates/flagd-workspace/flagd/flagd-testbed/flags/: changing-flag.json  custom-ops.json  edge-case-flags.json  evaluator-refs.json  metadata-flags.json  selector-flag-combined-metadata.json  selector-flags.json  testing-flags.json  zero-flags.json
crates/flagd-workspace/flagd/flagd-testbed/gherkin/: config.feature  connection.feature  contextEnrichment.feature  evaluation.feature  events.feature  metadata.feature  rpc-caching.feature  selector.feature  sync-payload.feature  targeting.feature
crates/flagd-workspace/flagd/flagd-testbed/launchpad/: .gitignore  README.md  go.mod  go.sum  main.go
crates/flagd-workspace/flagd/flagd-testbed/launchpad/configs/: default.json  metadata.json  ssl.json  sync-payload.json
crates/flagd-workspace/flagd/flagd-testbed/launchpad/handlers/: http.go
crates/flagd-workspace/flagd/flagd-testbed/launchpad/pkg/: filewatcher.go  flagd.go  json.go  json_test.go
crates/flagd-workspace/flagd/flagd-testbed/ssl/: README.md  custom-ca.key  custom-root-cert.crt
crates/flagd-workspace/flagd/src/: error.rs  lib.rs
crates/flagd-workspace/flagd/src/cache/: lru.rs  mod.rs  service.rs
crates/flagd-workspace/flagd/src/resolver/: mod.rs  rpc.rs
crates/flagd-workspace/flagd/src/resolver/in_process/resolver/: file.rs  grpc.rs  mod.rs
crates/flagd-workspace/flagd/src/resolver/in_process/storage/: mod.rs
crates/flagd-workspace/flagd/src/resolver/in_process/storage/connector/: file.rs  mod.rs
crates/flagd-workspace/flagd/tests/: envoy_test.rs
crates/flagd-workspace/flagd/tests/common/: mod.rs
crates/flagd-workspace/ofrep/: Cargo.toml  README.md
crates/flagd-workspace/ofrep/src/: lib.rs  resolver.rs
crates/flagd/benches/: evaluation_benchmark.rs
crates/flagd/docs/: contributing.md
crates/flagd/examples/: in_process.rs
crates/flagd/examples/common/: mod.rs
crates/flagd/src/: error.rs  lib.rs
crates/flagd/src/cache/: in_memory.rs  service.rs
crates/flagd/src/otel/: grpc.rs  http.rs  metrics.rs  mod.rs  propagation.rs  span.rs  tests.rs
crates/flagd/src/resolver/: mod.rs  rest.rs  rpc.rs
crates/flagd/src/resolver/common/: mod.rs  name_resolvers.rs  upstream.rs
crates/flagd/src/resolver/in_process/: mod.rs
crates/flagd/src/resolver/in_process/model/: feature_flag.rs  flag_parser.rs  mod.rs  value_converter.rs
crates/flagd/src/resolver/in_process/resolver/: common.rs  file.rs  grpc.rs  mod.rs
crates/flagd/src/resolver/in_process/storage/: mod.rs
crates/flagd/src/resolver/in_process/storage/connector/: file.rs  grpc.rs  mod.rs
crates/flagd/src/resolver/in_process/targeting/: fractional.rs  mod.rs  semver.rs  string_comp.rs
crates/flagd/tests/: README.md  cache_test.rs  color_palette_experiment_test.rs  e2e_test.rs  envoy_test.rs  gherkin_config_test.rs  gherkin_evaluation_test.rs  gherkin_metadata_test.rs  gherkin_selector_test.rs  gherkin_targeting_test.rs  gherkin_testbed_docker_test.rs  in_process_test.rs  offline_test.rs  targeting_test.rs  testbed.rs
crates/flagd/tests/common/: mod.rs  testbed.rs
crates/flagsmith/: CHANGELOG.md  Cargo.toml  README.md
crates/flagsmith/src/: error.rs  lib.rs
crates/flagsmith/tests/: error_tests.rs  integration_tests.rs  provider_tests.rs  unit_tests.rs
crates/flipt/: CHANGELOG.md  Cargo.toml  README.md
crates/flipt/src/: flipt.rs  lib.rs  utils.rs
crates/flipt/tests/: evaluation.rs
crates/ofrep/: CHANGELOG.md  Cargo.toml  README.md
crates/ofrep/src/: error.rs  lib.rs  resolver.rs
src/: lib.rs
src/providers/: providers.rs
src/providers/flagd/: flagd.rs
src/providers/flagd/proto/: mod.rs
src/providers/flagd/proto/rust/: mod.rs  schema.v1.rs  schema.v1.serde.rs  schema.v1.tonic.rs  sync.v1.rs  sync.v1.serde.rs  sync.v1.tonic.rs
src/providers/flagd/service/: service.rs
src/service/: service.rs
