[package]

name = "open-feature-env-var"
version = "0.1.0"
edition = "2021"
description = "Open Feature SDK for Rust: Environment Variable"
authors = ["Jose Bovet Derpich <jose.bovet@gmail.com>"]
repository = "https://github.com/open-feature/rust-sdk-contrib/tree/main/crates/env-var"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open-feature = "0.2.3"
async-trait = "0.1.80"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
