[package]
name = "flagd-evaluation-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.88" # MSRV
description = "Evaluation engine for flagd - JSONLogic-based targeting rules"
documentation = "https://docs.rs/flagd-evaluation-engine"
readme = "README.md"
homepage = "https://openfeature.dev/"
repository = "https://github.com/open-feature/rust-sdk-contrib"
license = "Apache-2.0"

[dependencies]
# Core evaluation dependencies
datalogic-rs = "4.0.4"
murmurhash3 = "0.0.5"
semver = "1.0"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"

# OpenFeature SDK (for EvaluationContext types)
open-feature = "0.2"
