[workspace]
resolver = "2"

members = [
    "flagd",
    "flagd-evaluation-engine",
]

[workspace.dependencies]
# Core evaluation
datalogic-rs = "4.0.4"
murmurhash3 = "0.0.5"
semver = "1.0"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"

# OpenFeature SDK
open-feature = "0.2"

# Async runtime
async-trait = "0.1"
tokio = { version = "1.48", features = ["sync", "time", "fs", "rt", "rt-multi-thread", "macros", "net"] }

# File watching
notify = "8.2"

# gRPC
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen", "tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# HTTP
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "rustls"] }
