[package]
name = "open-feature-flagd"
version = "0.0.8"
edition = "2024"
rust-version = "1.88" # MSRV
description = "The official flagd provider for OpenFeature."
documentation = "https://docs.rs/open-feature-flagd"
readme = "README.md"
homepage = "https://openfeature.dev/"
repository = "https://github.com/open-feature/rust-sdk-contrib"
license = "Apache-2.0"

[package.metadata.cargo-shear]
# Used by generated protobuf code (build.rs)
ignored = ["prost", "tonic-prost"]

# This is needed to reduce package size
include = [
    "schemas/protobuf/flagd/evaluation/v1/evaluation.proto",
    "schemas/protobuf/flagd/sync/v1/sync.proto",
    "build.rs",
    "src/*",
]

[features]
default = ["rpc", "rest", "in-process"]
# RPC evaluation mode - uses gRPC to connect to flagd service
rpc = ["dep:tonic", "dep:tonic-prost", "dep:prost", "dep:prost-types", "dep:hyper-util", "dep:tower"]
# REST evaluation mode - uses HTTP/OFREP to connect to flagd service
rest = ["dep:reqwest"]
# In-process evaluation mode - local evaluation with gRPC sync or file-based configuration
in-process = ["dep:tonic", "dep:tonic-prost", "dep:prost", "dep:prost-types", "dep:datalogic-rs", "dep:murmurhash3", "dep:semver", "dep:notify"]
# OpenTelemetry instrumentation - adds tracing spans and context propagation
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:pin-project-lite", "dep:http-body", "dep:http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
cucumber = "0.22"
futures-core = "0.3"
testcontainers = { version = "0.26.0", features = ["http_wait", "blocking"] }
wiremock = "0.6.5"
tempfile = "3.23.0"
serial_test = "3.2"
test-log = { version = "0.2", features = ["trace"] }
fake-opentelemetry-collector = "0.33"
insta = { version = "1", features = ["redactions", "yaml"] }
assert2 = "0.3"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "testing"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"


[dependencies]
open-feature = "0.2"
async-trait = "0.1"
tokio = { version = "1.48", features = ["sync", "time", "fs", "rt", "rt-multi-thread", "macros", "net"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lru = "0.16"
tokio-stream = "0.1"
tracing = "0.1"
thiserror = "2.0"

# RPC and In-Process shared dependencies (gRPC)
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen"], optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }

# RPC-specific dependencies
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }

# REST-specific dependencies
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }

# In-Process-specific dependencies (targeting engine)
datalogic-rs = { version = "4.0.4", optional = true }
murmurhash3 = { version = "0.0.5", optional = true }
semver = { version = "1.0.27", optional = true }
notify = { version = "8.2", optional = true }

# OpenTelemetry instrumentation dependencies
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
pin-project-lite = { version = "0.2", optional = true }
http-body = { version = "1", optional = true }
http = { version = "1", optional = true }
