[package]
name = "open-feature-flagd"
version = "0.1.0"
edition = "2024"
rust-version = "1.88" # MSRV
description = "The official flagd provider for OpenFeature."
documentation = "https://docs.rs/open-feature-flagd"
readme = "README.md"
homepage = "https://openfeature.dev/"
repository = "https://github.com/open-feature/rust-sdk-contrib"
license = "Apache-2.0"

[package.metadata.cargo-shear]
# Used by generated protobuf code (build.rs)
ignored = ["prost", "tonic-prost"]

# This is needed to reduce package size
include = [
    "schemas/protobuf/flagd/evaluation/v1/evaluation.proto",
    "schemas/protobuf/flagd/sync/v1/sync.proto",
    "build.rs",
    "src/*",
]

[features]
default = ["rpc", "rest", "in-process"]
# RPC evaluation mode - uses gRPC to connect to flagd service
rpc = ["dep:tonic", "dep:tonic-prost", "dep:prost", "dep:prost-types", "dep:hyper-util", "dep:tower"]
# REST evaluation mode - uses HTTP/OFREP to connect to flagd service
rest = ["dep:reqwest"]
# In-process evaluation mode - local evaluation with gRPC sync or file-based configuration
in-process = ["dep:tonic", "dep:tonic-prost", "dep:prost", "dep:prost-types", "dep:datalogic-rs", "dep:murmurhash3", "dep:semver", "dep:notify", "dep:hyper-util", "dep:tower"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
cucumber = "0.22"
futures-core = "0.3"
testcontainers = { version = "0.26.3", features = ["http_wait", "blocking"] }
wiremock = "0.6.5"
tempfile = "3.24.0"
serial_test = "3.2"
test-log = { version = "0.2", features = ["trace"] }


[dependencies]
open-feature = "0.2"
async-trait = "0.1"
tokio = { version = "1.48", features = ["sync", "time", "fs", "rt", "rt-multi-thread", "macros", "net"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lru = "0.16"
tokio-stream = "0.1"
tracing = "0.1"
thiserror = "2.0"

# RPC and In-Process shared dependencies (gRPC)
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen", "tls-ring", "tls-webpki-roots"], optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }

# RPC-specific dependencies
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }

# REST-specific dependencies
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "rustls"], optional = true }

# In-Process-specific dependencies (targeting engine)
datalogic-rs = { version = "4.0.4", optional = true }
murmurhash3 = { version = "0.0.5", optional = true }
semver = { version = "1.0.27", optional = true }
notify = { version = "8.2", optional = true }
