[package]
name = "open-feature-ofrep"
description = "The official OpenFeature Remote Evaluation Protocol (OFREP) provider for OpenFeature."
documentation = "https://docs.rs/open-feature-ofrep"
homepage = "https://openfeature.dev/"
license = "Apache-2.0"
repository = "https://github.com/open-feature/rust-sdk-contrib"
version = "0.0.3"
edition = "2024"

[dev-dependencies]
wiremock = "0.6.3"
test-log = { version = "0.2", features = ["trace"] }
serial_test = "3.2.0"

[dependencies]
async-trait = "0.1.88"
open-feature = "0.2.5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
serde_json = "1.0.140"
tracing = "0.1.41"
thiserror = "2.0"
anyhow = "1.0.98"
chrono = "0.4"
once_cell = "1.18"
tokio = { version = "1.45", features = ["full"] }
url = "2.5.4"
