[package]
name = "open-feature-ofrep"
description = "The official OpenFeature Remote Evaluation Protocol (OFREP) provider for OpenFeature."
documentation = "https://docs.rs/open-feature-ofrep"
homepage = "https://openfeature.dev/"
license = "Apache-2.0"
repository = "https://github.com/open-feature/rust-sdk-contrib"
version = "0.0.4"
edition = "2024"
rust-version = "1.85.1"

[dev-dependencies]
wiremock = "0.6.5"
test-log = { version = "0.2", features = ["trace"] }
serial_test = "3.2.0"

[dependencies]
async-trait = "0.1.89"
open-feature = "0.2.7"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
serde_json = "1.0.145"
tracing = "0.1.41"
thiserror = "2.0"
anyhow = "1.0.100"
chrono = "0.4"
once_cell = "1.21"
tokio = { version = "1.48", features = ["full"] }
url = "2.5.7"
