[package]
name = "open-feature-ofrep"
description = "The official OpenFeature Remote Evaluation Protocol (OFREP) provider for OpenFeature."
documentation = "https://docs.rs/open-feature-ofrep"
homepage = "https://openfeature.dev/"
license = "Apache-2.0"
repository = "https://github.com/open-feature/rust-sdk-contrib"
version = "0.0.4"
edition = "2024"
rust-version = "1.85.1"

[dev-dependencies]
wiremock = "0.6.5"
test-log = { version = "0.2", features = ["trace"] }
serial_test = "3.2.0"

[dependencies]
async-trait = { workspace = true }
open-feature = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
